tests/type-errors/not_type.adb
procedure Not_Type is

    X : Integer;
    Y : X;

begin
    Y := 2;
end Not_Type;

